--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/swagger": "^4.2.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "nestjs-typegoose": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
